--- a/public/skeleton/section.html
+++ b/public/skeleton/section.html
@@ -23,14 +23,22 @@
 			<ul class="left">
         <li><a id="nav-back" href="#"><i class="material-icons">keyboard_arrow_left</i></a></li>
       </ul>
-      <span class="brand-logo course-name">My Calendar</span>
+      <span class="brand-logo course-name">Section selection</span>
     </div>
   </nav>
 	<main>
 		<div class="container">
-			<h5>Page to display and export calendar</h5>
+			<h5>Page to select section</h5>
 		</div>
 	</main>
+	<footer>
+		<button class="btn btn-large waves-effect waves-light" id="section-next" type="submit" name="action">Next
+			<i class="material-icons right">send</i>
+		</button>
+		<button class="btn btn-large waves-effect waves-light" id="section-custom" type="submit" name="action">Add Event
+			<i class="material-icons right">event</i>
+		</button>
+	</footer>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 	<script src="/script/script.js"></script>
