--- a/public/skeleton/custom.html
+++ b/public/skeleton/custom.html
@@ -21,7 +21,7 @@
 	<nav class="top-nav">
     <div class="nav-wrapper">
 			<ul class="left">
-        <li><a href="/section"><i class="material-icons">keyboard_arrow_left</i></a></li>
+				<li><a id="nav-back" href="#"><i class="material-icons">keyboard_arrow_left</i></a></li>
       </ul>
       <span class="brand-logo course-name">Custom Event</span>
     </div>
