--- a/public/skeleton/index.html
+++ b/public/skeleton/index.html
@@ -18,19 +18,24 @@
 </head>
 
 <body>
-	<nav class="top-nav">
-    <div class="nav-wrapper">
-			<ul class="left">
-        <li><a id="nav-back" href="#"><i class="material-icons">keyboard_arrow_left</i></a></li>
-      </ul>
-      <span class="brand-logo course-name">My Calendar</span>
-    </div>
-  </nav>
+<nav class="top-nav">
+	<div class="nav-wrapper">
+		<span class="brand-logo">UCSDPLAN.ME</span>
+		<ul class="right">
+			<li><a href="/skeleton/help.html"><i class="material-icons">info</i></a></li>
+		</ul>
+	</div>
+</nav>
 	<main>
 		<div class="container">
-			<h5>Page to display and export calendar</h5>
+			<h5>Courses may be added here</h5>
 		</div>
 	</main>
+	<footer>
+		<button class="btn btn-large waves-effect waves-light" id="skeleton-next" type="submit" name="action">Next
+			<i class="material-icons right">send</i>
+		</button>
+	</footer>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 	<script src="/script/script.js"></script>
