--- a/public/skeleton/calendar.html
+++ b/public/skeleton/calendar.html
@@ -34,5 +34,5 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 	<script src="/script/script.js"></script>
-<script src="//localhost:35729/livereload.js?snipver=1" async="" defer=""></script></body>
+</body>
 </html>
