modify scss structure, add grayscale, add export buttons

--- a/public/skeleton/calendar.html
+++ b/public/skeleton/calendar.html
@@ -31,6 +31,14 @@
 			<h5>Page to display and export calendar</h5>
 		</div>
 	</main>
+	<footer class="footer-vertical">
+		<button class="btn btn-large btn-wide waves-effect waves-light" id="skeleton-gcal" type="submit" name="action" onclick="alert('You are now redirected to the import calendar dialog of Google Calendar');">Export to Google Calendar
+			<i class="material-icons right">event_note</i>
+		</button>
+		<button class="btn btn-large btn-wide waves-effect waves-light" id="skeleton-ical" type="submit" name="action" onclick="alert('You are now downloading an ical file that may be exported into any calendar app');">Download .ical file
+			<i class="material-icons right">file_download</i>
+		</button>
+	</footer>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
 	<script src="/script/script.js"></script>
