--- a/public/login/index.html
+++ b/public/login/index.html
@@ -17,31 +17,23 @@
 </head>
 
 <body>
-<nav class="top-nav">
+<!--<nav class="top-nav">
 	<div class="nav-wrapper", div style="text-align: center;">
 		<span class="brand-logo">UCSDPLAN.ME</span>
 	</div>
-</nav>
-
-<div class="row">
-	<div class="col s12" id="class-search">
-		<div id="homepage-logo", div style="text-align: center;">
-			<img src="/http://ucpa.ucsd.edu/img/brand/ucsd-triton-logo.svg" alt="UC San Diego Login Logo" class = "center", align ="middle">
-		</div>
-	</div>
-</div>
-</body>
-
-<main>
+</nav>-->
+<main class="main-login">
+	<div class="logo-img"></div>
 	<div class="container">
-		<h5></h5>
-	</div>
-</main>
-<div div style="text-align: center;">
-<button class="btn btn-large waves-effect waves-light" id="skeleton-next" type="submit" name="action"><a href="/auth/google">Sign In with Google</a>
-			<i class="material-icons right">send</i>
-</button>
+	<center>
+		<a href="/auth/google" class="waves-effect waves-light btn btn-large btn-wide"><span class="btn-text-centered">Sign In with Google</span><i class="logo-google left"></i></a>
+		<p class="or">- or -</p>
+		<button class="waves-effect waves-light btn btn-large btn-wide" disabled><span class="btn-text-centered">Sign In as guest</span><i class="material-icons left">person</i></button>
+	</center>
 </div>
+</main>
+
+</body>
 
 
 <!--<h1>Login with Google</h1>
