--- a/public/about/index.html
+++ b/public/about/index.html
@@ -19,19 +19,15 @@
 <body>
 		<nav class="top-nav">
 	    <div class="nav-wrapper">
-	      <span class="brand-logo">My Calendar</span>
+	      <span class="brand-logo">About</span>
 				<ul class="nav-ul left">
-					<li><a href="#" data-activates="slide-out" class="button-collapse waves-effect"><i class="material-icons">menu</i></a></li>
+					<li><a href="/"><i class="material-icons">chevron_left</i></a></li>
 	      </ul>
 	    </div>
 	  </nav>
-		{{> sidenav this }}
 		<main>
 		</main>
 		<footer>
-			<button class="btn btn-large waves-effect waves-light" id="homepage-next" type="submit" name="action">Next
-				<i class="material-icons right">send</i>
-			</button>
 		</footer>
 	</form>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
